# reference-architecture

./: .gitignore  README.md  pyproject.toml
arena-staging/: README.md  arena_nccl_allreduce.py  arena_vast.py  arena_wandb_model_train_evaluate_test.py  template.py
arena/notebooks/: ailabs_caios_lota_setup_walkthrough_benchmarks.py  ailabs_sunk_cluster_walkthrough_benchmarks.py  arena_caios_lota_setup_walkthrough_benchmarks.py  arena_nccl_allreduce.py  arena_sunk_cluster_walkthrough_benchmarks.py  arena_vast.py  arena_wandb_model_train_evaluate_test.py  caios_boto3.py  caios_lota_benchmarks.py  caios_warp.py  cks_kubernetes.py  sandboxes-workshop.py  sunk_cluster_walkthrough.py
arena/notebooks/arena/: k8s.py  (+3 more)
arena/scripts/: startup.sh
arena/staging/: README.md  arena_nccl_allreduce.py  arena_vast.py
inference/basic/: .helmignore  Chart.yaml  README.md  test.yaml  values.yaml
observability/basic/: Chart.yaml  README.md  values.yaml
physical-ai/cosmos3/: Chart.yaml  Dockerfile  README.md  TUTORIAL.md  UPSTREAM_BUGS.md  values.yaml
ray-slurm/: README.md  ray.container.sbatch  ray.devcluster.sbatch  ray.samplejob.sbatch  tune_basic_example.py
secrets-management/: README.md
secrets-management/cloud-kms/: README.md
secrets-management/eso/: README.md  helm-values.yaml
secrets-management/infisical/: README.md  env.example
skypilot/: README.md
skypilot/config-examples/: my-caios-devpod.yaml  simple-devpod.yaml
storage/caios-credentials/: README.md  configure_caios_credentials.sh
storage/caios-to-dfs/: README.md  transfer.slurm
storage/dfs-rebind-pvc/: README.md  rebind-pvc.sh
storage/dfs-shared-pvc/: README.md  share-pvc.sh
storage/pvc-migrate/: README.md  go.mod  main.go  pvcmigrate
storage/warp-benchmark/: README.md  warp-benchmark  warp-gb200-config.yaml
terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
zot-oci-registry-in-cluster/: .helmignore  Chart.yaml  README.md  values.yaml
zot-oci-registry-in-cluster/files/: cert-manager-values.yaml  values-test.yaml  zot-values.yaml
zot-oci-registry-in-cluster/reports/: enroot.md  sample-enroute-import.yaml  zb-bencharmarking.yaml  zb-benchmark-with-lota.txt  zb-benchmark-without-lota.txt  zb-benchmark.md  zb-benchmarking.yaml
zot-oci-registry-in-cluster/templates/: NOTES.txt  _helpers.tpl  ca-bootstrap.yaml  containerd-ds.yaml  external-gateway-httproute.yaml  external-gateway.yaml  internal-gateway-httproute.yaml  internal-gateway.yaml  networkpolicy-external-gateway.yaml
(+125 files in other folders)
